--- a/app.yaml
+++ b/app.yaml
@@ -1,13 +1,8 @@
-application: teh
+application: milan
 version: 1
 runtime: python
 api_version: 1
 
 handlers:
-- url: /static
-  static_dir: static
 - url: /.*
-  script: webapp.py
-- url: /new
-  script: webapp.py
-  login: admin
+  script: helloworld.py
